<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PTFinalMP7</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Entrar">Inicia Sessió</string>
    <string name="Cancelar">Cancel·lar</string>
    <string name="registrat">Registrat</string>
    <string name="descripcio_logo">Imatge corporativa</string>
    <string name="nom">Nom</string>
    <string name="cognom">Cognom</string>
    <string name="nickname">Nom Usuari</string>
    <string name="mobil">Tel. Mòbil</string>
    <string name="password">Contrasenya</string>
    <string name="repassword">Rescriu Contrasenya</string>
    <string name="email">Email</string>
    <string name="condicions">Condicions</string>
    <string name="acepta_condi">Accepta Condicions</string>
    <string name="usuari">Usuari</string>
    <string name="contrasena">Contrasenya</string>
    <string name="imageP">Imatge de portada</string>
    <string name="reserva">Reserva</string>
    <string name="carta">Carta</string>
    <string name="ubicacio">On trobar-nos</string>
    <string name="title_activity_dash_board_principal">DashBoardPrincipalActivity</string>
    <string name="title_activity_condicions">CondicionsActivity</string>
    <string name="acepta_condicions">Aquesta Activitat mostrarà les condicions que visulitzarem des de una pàgina web </string>
    <string name="title_activity_primers">PrimersActivity</string>
    <string name="title_activity_segons">SegonsActivity</string>
    <string name="title_activity_postres">PostresActivity</string>

</resources>