<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <Button
        android:id="@+id/ButtonOnEstem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="160dp"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/ic_mapa"
        android:text="@string/ubicacio" />

    <Button
        android:id="@+id/ButtonReserva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ButtonOnEstem"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="70dp"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/ic_menu"
        android:text="@string/reserva" />

    <Button
        android:id="@+id/ButtonCarta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ButtonReserva"
        android:layout_alignBottom="@+id/ButtonReserva"
        android:layout_alignParentRight="true"
        android:layout_marginRight="70dp"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/ic_reserva"
        android:text="@string/carta" />

    <ImageView
        android:id="@+id/imageView1"
        android:contentDescription="@string/descripcio_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:src="@drawable/ic_fork" />

</RelativeLayout>