<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" 
        style="@style/personal">

        <!--
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
        -->

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="80dp"
            android:layout_height="110dp"
            android:layout_marginBottom="49dp"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/imageP"
            android:src="@drawable/ic_fork_web" />

        <TextView
            android:id="@+id/textUsuari"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="140dp"
            android:layout_marginBottom="2dp"
            style="@style/personal"
            android:text="@string/usuari" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginBottom="2dp"
            android:ems="10" >

            
        </EditText>

        <TextView
            android:id="@+id/textContrasena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="105dp"
            android:layout_marginBottom="2dp"
            style="@style/personal"
            android:text="@string/contrasena" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginBottom="30dp"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginLeft="18dp"
            android:autoLink="all"
            android:text="@string/registrat"
            android:textColor="#091F92" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:layout_marginLeft="25dp"
            android:background="@drawable/button"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/Entrar"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />
    </LinearLayout>

</ScrollView>